Added and tested author updating logic
